--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.18.0",
+		"bootstrap": "^4.1.3",
 		"mobx": "^5.5.0",
 		"mobx-react": "^5.2.8",
 		"prop-types": "^15.6.2",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
-		"react-router-dom": "^4.3.1"
+		"react-router-dom": "^4.3.1",
+		"reactstrap": "^6.5.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.1.2",
